@@ -1,0 +1,20 @@
+# -------------------------------------------------------------
+# ----- Setting File with UTF8-----
+# ----- 数据库配置文件 -----
+# -------------------------------------------------------------
+
+# 键值都支持中文，默认UTF-8编码，可以在new Setting的时候设置编码
+key = value
+
+#中括表示一个分组，其下面的所有属性归属于这个分组，在此分组名为demo，也可以没有分组
+#分组后的键值对在Setting对象中表现形式是：demo.key，也可以使用相应的方法取值
+[demo]
+# 类似于Properties的键值对
+key = value
+# 支持变量替换（在new Setting的时候需要设置isUseVariable为true）
+key2 = value${key}
+
+#中括号开始表示新的分组开始，分组相互独立，键值与其他分组互不影响
+[demo2]
+key = value2
+key2 = value
